--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: csr-approver
+  name: kubelet-rubber-stamp
 rules:
 - apiGroups:
   - certificates.k8s.io
