--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,12 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csr-approver
+  name: kubelet-rubber-stamp
 subjects:
 - kind: ServiceAccount
   namespace: default
-  name: csr-approver
+  name: kubelet-rubber-stamp
 roleRef:
   kind: ClusterRole
-  name: csr-approver
+  name: kubelet-rubber-stamp
   apiGroup: rbac.authorization.k8s.io
