fix drone 1.0 yaml syntax and enable on public drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,11 @@
+---
+kind: pipeline
+name: default
+
+platform:
+  os: linux
+  arch: amd64
+
 workspace:
   base: /go
   path: src/github.com/kontena/kubelet-rubber-stamp
