--- a/.drone.yml
+++ b/.drone.yml
@@ -20,25 +20,29 @@ steps:
       - ./test.sh
 
   - name: docker
-    group: image
-    registry: quay.io
     image: plugins/docker
-    secrets: [ docker_username, docker_password ]
-    repo: quay.io/kontena/kubelet-rubber-stamp-amd64
-    dockerfile: Dockerfile
-    auto_tag: true
-    when:
-      branches: ['master', 'refs/tags/*']
+    settings:
+      registry: quay.io
+      secrets: [ docker_username, docker_password ]
+      repo: quay.io/kontena/kubelet-rubber-stamp-amd64
+      dockerfile: Dockerfile
+      auto_tag: true
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
 
   - name: docker-arm
-    group: image
-    registry: quay.io
     image: plugins/docker
-    secrets: [ docker_username, docker_password ]
-    repo: quay.io/kontena/kubelet-rubber-stamp-arm64
-    dockerfile: Dockerfile
-    build_args:
-      - ARCH=arm64
-    auto_tag: true
-    when:
-      branches: ['master', 'refs/tags/*']
+    settings:
+      registry: quay.io
+      secrets: [ docker_username, docker_password ]
+      repo: quay.io/kontena/kubelet-rubber-stamp-arm64
+      dockerfile: Dockerfile
+      build_args:
+        - ARCH=arm64
+      auto_tag: true
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
