Move to kube-system namespace
* add missing newline
* fixes #7

Signed-off-by: Alex Szakaly <alex.szakaly@gmail.com>

--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kubelet-rubber-stamp
 subjects:
 - kind: ServiceAccount
-  namespace: default
+  namespace: kube-system
   name: kubelet-rubber-stamp
 roleRef:
   kind: ClusterRole
