--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kubelet-rubber-stamp
+  namespace: kube-system
 spec:
   replicas: 1
   selector:
