Move logging to klog
* Add option to increase logging verbosity via `args` in deployment

Fixes issue #20.

Signed-off-by: Alex Szakaly <alex.szakaly@gmail.com>

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -23,6 +23,8 @@ spec:
       containers:
         - name: kubelet-rubber-stamp
           image: quay.io/kontena/kubelet-rubber-stamp-amd64:latest
+          args:
+            - "--v=2"
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
