Fix CSR approval on kubernetes-1.18.0 version
Fixes #23

Signed-off-by: Alex Szakaly <alex.szakaly@gmail.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -6,9 +6,18 @@ rules:
 - apiGroups:
   - certificates.k8s.io
   resources:
+  - signers
+  # legacy-unknown: support before kubernetes-1.18.0
+  resourceNames:
+  - "kubernetes.io/legacy-unknown"
+  - "kubernetes.io/kubelet-serving"
+  verbs:
+  - approve
+- apiGroups:
+  - certificates.k8s.io
+  resources:
   - certificatesigningrequests
   verbs:
-  - delete
   - get
   - list
   - watch
