Move to non-root container
* Create user (1001) during build and copy into SCRATCH image

* Set spec.template.spec.securityContext.runAsUser: 1001

Fixes #32

Signed-off-by: Alex Szakaly <alex.szakaly@gmail.com>

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         name: kubelet-rubber-stamp
     spec:
+      securityContext:
+        runAsUser: 1001
       serviceAccountName: kubelet-rubber-stamp
       tolerations:
         - effect: NoSchedule
