Add resource requests and limits
Limits are rather liberal, since we have no experience with running
kubelet-rubber-stamp in larger clusters, yet.

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -26,6 +26,13 @@ spec:
           args:
             - "--v=2"
           imagePullPolicy: Always
+          resources:
+            requests:
+              cpu: 10m
+              memory: 16Mi
+            limits:
+              cpu: 100m
+              memory: 64Mi
           env:
             - name: WATCH_NAMESPACE
               value: ""
