--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -33,6 +33,14 @@ spec:
             limits:
               cpu: 100m
               memory: 64Mi
+          securityContext:
+            runAsUser: 1001
+            runAsNonRoot: true
+            privileged: false
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop: ["all"]
           env:
             - name: WATCH_NAMESPACE
               value: ""
